--- a/SchoolLibrary/.gitignore
+++ b/SchoolLibrary/.gitignore
@@ -37,6 +37,8 @@ packages/
 _ReSharper.*
 SchoolLibrary/bin
 SchoolLibrary/obj
+SchoolLibrary/Scripts
+SchoolLibrary/Content
 packages
 
 #Project files
