--- a/SchoolLibrary.Tests/packages.config
+++ b/SchoolLibrary.Tests/packages.config
@@ -3,6 +3,7 @@
   <package id="Castle.Core" version="4.4.0" targetFramework="net472" />
   <package id="FluentAssertions" version="5.10.3" targetFramework="net472" />
   <package id="GenFu" version="1.6.0" targetFramework="net472" />
+  <package id="Humanizer.Core" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
@@ -44,16 +45,22 @@
   <package id="Microsoft.AspNetCore.Mvc.ViewFeatures" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Razor.Design" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Razor.Language" version="5.0.3" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Razor" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Razor" version="5.0.3" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.9.0" targetFramework="net472" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.9.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.DiaSymReader.Native" version="1.7.0" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
@@ -84,11 +91,17 @@
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
   <package id="NUnit" version="3.13.1" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net472" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net472" />
   <package id="System.Console" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net472" />
@@ -101,15 +114,16 @@
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.0" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.1" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
-  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
@@ -123,7 +137,7 @@
   <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net472" />
-  <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net472" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
@@ -137,4 +151,5 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net472" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
 </packages>
