--- a/SchoolLibrary.Tests/SchoolLibrary.Tests.csproj
+++ b/SchoolLibrary.Tests/SchoolLibrary.Tests.csproj
@@ -522,6 +522,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\AuthorControllerTest.cs" />
     <Compile Include="Controllers\BooksControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
